@@ -10,6 +10,7 @@ SimpleTest 6.x-2.4, xxxx-xx-xx (development version)
    * #308186: cURL 7.18.2 and SimpleTest module bitterly despise one another.
    * #295697: update cURL requirement.
    * #299186: assertFieldByXPath does not work for selects or textareas with value.
+   * #308272: Improve test selection page.
 
 SimpleTest 6.x-2.3, 2008-09-15
 ------------------------------
